crates/au-cli/tests/it/snapshots/it__scenarios__body-unterminated-fence.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "body-unterminated-fence",
      "message": "fenced code block opens (`yaml`) but has no matching closing fence later in the body",
      "severity": "warning",
      "span": {
        "file": "<root>/scenarios/body-unterminated-fence/stray-fence.md",
        "line_col": {
          "end": {
            "col": 1,
            "line": 11
          },
          "start": {
            "col": 1,
            "line": 10
          }
        },
        "range": {
          "end": 114,
          "start": 106
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 29,
                        "line_col": {
                          "end": {
                            "col": 30,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/body-unterminated-fence/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "body-unterminated-fence"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "body-unterminated-fence"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/body-unterminated-fence/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 86,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 78
            },
            "text": "Notes"
          },
          {
            "info": "yaml",
            "kind": "unterminated_fence_open",
            "span": {
              "end": 114,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 10
                }
              },
              "start": 106
            }
          },
          {
            "content": "# Notes",
            "kind": "inline_code",
            "span": {
              "end": 198,
              "line_col": {
                "end": {
                  "col": 56,
                  "line": 15
                },
                "start": {
                  "col": 47,
                  "line": 15
                }
              },
              "start": 189
            }
          },
          {
            "content": "body-unterminated-fence",
            "kind": "inline_code",
            "span": {
              "end": 287,
              "line_col": {
                "end": {
                  "col": 74,
                  "line": 16
                },
                "start": {
                  "col": 49,
                  "line": 16
                }
              },
              "start": 262
            }
          }
        ],
        "claim": [
          "note"
        ],
        "closure": [
          "note"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "note",
                "origin_path": "<root>/scenarios/body-unterminated-fence/type/note.type.yaml",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 72,
                        "line_col": {
                          "end": {
                            "col": 58,
                            "line": 3
                          },
                          "start": {
                            "col": 14,
                            "line": 3
                          }
                        },
                        "start": 28
                      },
                      "file": "<root>/scenarios/body-unterminated-fence/stray-fence.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "Author left a fenced block open by mistake"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "Author left a fenced block open by mistake"
                }
              }
            ],
            "field": "description"
          }
        ],
        "file": "<root>/scenarios/body-unterminated-fence/stray-fence.md",
        "section_presence": [
          {
            "depth": 1,
            "name": "Notes",
            "optional": false,
            "path": [
              "Notes"
            ],
            "present": true,
            "span": {
              "end": 86,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 7
                },
                "start": {
                  "col": 1,
                  "line": 6
                }
              },
              "start": 78
            }
          }
        ]
      }
    ]
  }
}
