crates/au-cli/tests/it/snapshots/it__scenarios__body-use-cycle.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "body-use-cycle",
      "message": "type-def 'loop' participates in a self-`use:` splice cycle",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/body-use-cycle/type/loop.type.yaml",
        "line_col": {
          "end": {
            "col": 1,
            "line": 5
          },
          "start": {
            "col": 1,
            "line": 1
          }
        },
        "range": {
          "end": 50,
          "start": 0
        }
      }
    }
  ],
  "graph": {
    "types": [
      {
        "abstract": false,
        "body": [
          {
            "kind": "use",
            "target": "loop"
          }
        ],
        "effective_body": [],
        "fields": [
          {
            "key_span": {
              "end": 21,
              "line_col": {
                "end": {
                  "col": 14,
                  "line": 2
                },
                "start": {
                  "col": 3,
                  "line": 2
                }
              },
              "start": 10
            },
            "name": "description",
            "required": true,
            "shape": "String",
            "shape_ast": {
              "kind": "primitive",
              "name": "String"
            }
          }
        ],
        "hash": "364f9ae1467c2498",
        "meta_blocks": null,
        "name": "loop",
        "parents": [],
        "required_meta": [],
        "sealed": null,
        "source": {
          "file": "<root>/scenarios/body-use-cycle/type/loop.type.yaml",
          "span": {
            "end": 50,
            "line_col": {
              "end": {
                "col": 1,
                "line": 5
              },
              "start": {
                "col": 1,
                "line": 1
              }
            },
            "start": 0
          }
        },
        "unmet_required_meta": []
      }
    ]
  }
}
