crates/au-cli/tests/it/snapshots/it__scenarios__body-use-nested-rejected.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "body-use-nested",
      "message": "`use:` is valid only at the top of the outermost `body:`",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/body-use-nested-rejected/type/child.type.yaml",
        "line_col": {
          "end": {
            "col": 1,
            "line": 8
          },
          "start": {
            "col": 9,
            "line": 7
          }
        },
        "range": {
          "end": 91,
          "start": 79
        }
      }
    }
  ],
  "graph": {
    "types": [
      {
        "abstract": false,
        "body": [
          {
            "body": [
              {
                "kind": "use",
                "target": "parent"
              }
            ],
            "kind": "section",
            "name": "Outer",
            "optional": false
          }
        ],
        "effective_body": [
          {
            "body": [
              {
                "kind": "use",
                "target": "parent"
              }
            ],
            "kind": "section",
            "name": "Outer",
            "optional": false
          }
        ],
        "fields": [
          {
            "key_span": {
              "end": 27,
              "line_col": {
                "end": {
                  "col": 4,
                  "line": 3
                },
                "start": {
                  "col": 3,
                  "line": 3
                }
              },
              "start": 26
            },
            "name": "x",
            "required": true,
            "shape": "String",
            "shape_ast": {
              "kind": "primitive",
              "name": "String"
            }
          }
        ],
        "hash": "7a894627b44dce69",
        "meta_blocks": null,
        "name": "child",
        "parents": [
          "parent"
        ],
        "required_meta": [],
        "sealed": null,
        "source": {
          "file": "<root>/scenarios/body-use-nested-rejected/type/child.type.yaml",
          "span": {
            "end": 91,
            "line_col": {
              "end": {
                "col": 1,
                "line": 8
              },
              "start": {
                "col": 1,
                "line": 1
              }
            },
            "start": 0
          }
        },
        "unmet_required_meta": []
      },
      {
        "abstract": false,
        "body": null,
        "effective_body": null,
        "fields": [
          {
            "key_span": {
              "end": 21,
              "line_col": {
                "end": {
                  "col": 14,
                  "line": 2
                },
                "start": {
                  "col": 3,
                  "line": 2
                }
              },
              "start": 10
            },
            "name": "description",
            "required": true,
            "shape": "String",
            "shape_ast": {
              "kind": "primitive",
              "name": "String"
            }
          }
        ],
        "hash": "99da1661a1dee065",
        "meta_blocks": null,
        "name": "parent",
        "parents": [],
        "required_meta": [],
        "sealed": null,
        "source": {
          "file": "<root>/scenarios/body-use-nested-rejected/type/parent.type.yaml",
          "span": {
            "end": 30,
            "line_col": {
              "end": {
                "col": 1,
                "line": 3
              },
              "start": {
                "col": 1,
                "line": 1
              }
            },
            "start": 0
          }
        },
        "unmet_required_meta": []
      }
    ]
  }
}
