crates/au-cli/tests/it/snapshots/it__scenarios__body-use-out-of-closure.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "body-use-out-of-closure",
      "message": "`use: note` references a type-def not in 'orphan's closure",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/body-use-out-of-closure/type/orphan.type.yaml",
        "line_col": {
          "end": {
            "col": 14,
            "line": 4
          },
          "start": {
            "col": 10,
            "line": 4
          }
        },
        "range": {
          "end": 43,
          "start": 39
        }
      }
    }
  ],
  "graph": {
    "types": [
      {
        "abstract": false,
        "body": [
          {
            "body": null,
            "kind": "section",
            "name": "Body",
            "optional": false
          }
        ],
        "effective_body": [
          {
            "body": null,
            "kind": "section",
            "name": "Body",
            "optional": false
          }
        ],
        "fields": [
          {
            "key_span": {
              "end": 21,
              "line_col": {
                "end": {
                  "col": 14,
                  "line": 2
                },
                "start": {
                  "col": 3,
                  "line": 2
                }
              },
              "start": 10
            },
            "name": "description",
            "required": true,
            "shape": "String",
            "shape_ast": {
              "kind": "primitive",
              "name": "String"
            }
          }
        ],
        "hash": "afe502d546568a4c",
        "meta_blocks": null,
        "name": "note",
        "parents": [],
        "required_meta": [],
        "sealed": null,
        "source": {
          "file": "<root>/scenarios/body-use-out-of-closure/type/note.type.yaml",
          "span": {
            "end": 54,
            "line_col": {
              "end": {
                "col": 1,
                "line": 5
              },
              "start": {
                "col": 1,
                "line": 1
              }
            },
            "start": 0
          }
        },
        "unmet_required_meta": []
      },
      {
        "abstract": false,
        "body": [
          {
            "kind": "use",
            "target": "note"
          },
          {
            "body": null,
            "kind": "section",
            "name": "Tail",
            "optional": false
          }
        ],
        "effective_body": [
          {
            "body": null,
            "kind": "section",
            "name": "Body",
            "optional": false
          },
          {
            "body": null,
            "kind": "section",
            "name": "Tail",
            "optional": false
          }
        ],
        "fields": [
          {
            "key_span": {
              "end": 15,
              "line_col": {
                "end": {
                  "col": 8,
                  "line": 2
                },
                "start": {
                  "col": 3,
                  "line": 2
                }
              },
              "start": 10
            },
            "name": "title",
            "required": true,
            "shape": "String",
            "shape_ast": {
              "kind": "primitive",
              "name": "String"
            }
          }
        ],
        "hash": "168abf8528d7b275",
        "meta_blocks": null,
        "name": "orphan",
        "parents": [],
        "required_meta": [],
        "sealed": null,
        "source": {
          "file": "<root>/scenarios/body-use-out-of-closure/type/orphan.type.yaml",
          "span": {
            "end": 62,
            "line_col": {
              "end": {
                "col": 1,
                "line": 6
              },
              "start": {
                "col": 1,
                "line": 1
              }
            },
            "start": 0
          }
        },
        "unmet_required_meta": []
      }
    ]
  }
}
